# memtrack

./: CMakeLists.txt  Makefile  README.md  memtrack.cpp  memview.cpp  test_app.cpp  verify.sh
cmake/: arm-linux-toolchain.cmake  run_test_app.cmake
